--- a/app/globals.css
+++ b/app/globals.css
@@ -66,6 +66,7 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  max-height: fit-content;
   background-color: var(--color-background);
   color: var(--color-foreground);
   transition:
